# kairn

./: .gitignore  CONVENTIONS.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
.kairn/: init.tcl  prelude.tcl
.kiro/agents/: kairn.json
.kiro/settings/: lsp.json
.kiro/skills/: decide-code-placement.md  estimate-task.md  fix-bug.md  implement-feature.md
.kiro/steering/: steering.md
doc/: CHANGELOG-migrate-tab-panel.md  code-structure-sop.md  example-init.tcl  pack-layout-algo.md  status-bar-redesign.md  tcl-reference.md
doc/f4-design/: BACKLOG.md  STATUS.md  kiro-sessions.md  lsp-status-indicator.md  split-view.md  tcl-plugin-system.md  txv-hardening-proposal.md  v-001-vision.md  v-002-look-and-feel.md  v-003-architecture.md  v-004-next-steps.md  v-005-parking-lot.md  v-006-txv-spec.md  v-007-txv-widgets-spec.md  v-008-tcl-spec.md  v-009-rusticle-tk-spec.md  v-010-rusticle-language-ref.md  v-011-kairn-spec.md  v-011.01-piece-table.md  v-011.02-editor-commands.md  v-011.03-panel-system.md  v-011.04-config-and-bridge.md  v-011.05-lsp.md  v-011.06-ports.md  v-012-view-hierarchy.md  v-013-txv-architecture.md  v-014-session-mcp-todo.md  (+9 more)
docs/: mini-ide-spec.md
examples/: keydbg.rs  tabgroup_demo.rs  table.csv
hooks/: pre-commit
rusticle/: Cargo.toml
rusticle-tk/: Cargo.toml  README.md
rusticle-tk/doc/: design-binding-architecture.md
rusticle-tk/examples/: config-editor.tcl  dashboard.tcl  dialog-demo.tcl  file-browser.tcl  hello.tcl  log-viewer.tcl  todo-list.tcl  widget-gallery.tcl
rusticle-tk/src/: desktop.rs  event_mgr.rs  keyspec.rs  layout_mgr.rs  layout_side.rs  lib.rs  main.rs  tk_bridge.rs  widget_mgr.rs
rusticle-tk/src/tk_bridge/: commands.rs  editor_widget.rs  mod.rs  tabbar_table.rs  tests.rs  text_list.rs  tree_input.rs  window_app.rs
rusticle-tk/tests/: test_bridge.rs  test_examples.rs  test_layout.rs  test_scenario.rs
src/: app.rs  app_init.rs  app_palette.rs  app_palette_defaults.rs  app_palette_roles.rs  app_palette_roles2.rs  app_state.rs  app_state_init.rs  blame.rs  broker.rs  buffer_entry.rs  buffer_id.rs  buffer_registry.rs  buffer_store.rs  build.rs  build_desktop.rs  build_detect.rs  build_parse.rs  build_state.rs  cairn_logo.rs  capture.rs  cli.rs  clip_entry.rs  clipboard.rs  clipboard_ring.rs  command_store.rs  commands.rs  completer.rs  completer_entry.rs  completer_file_finder.rs  completer_kiro.rs  completer_path.rs  completer_sub.rs  completer_symbol.rs  config.rs  config_colors.rs  config_keys.rs  config_tests.rs  csv_parse.rs  csv_table.rs  (+126 more)
syntaxes/: rill.sublime-syntax
tasks/: 001-pty-reflow-bug.md  002-todo-notes-pane.md  003-mcp-ide-bridge.md  003.01-mcp-tier1-read-only.md  003.02-mcp-tier2-tab-management.md  003.03-mcp-tier3-editor-manipulation.md  003.04-mcp-tier4-lsp-passthrough.md  003.05-mcp-tier5-build-search.md  004-split-vsplit.md  005-git-blame.md  006-zoom-focus-cycling.md  007-statusbar-customization.md  008-git-log-viewer.md  009-pty-activity-badges.md  01-backscroll-buffer.md  010-longer-tab-titles.md  011-kiro-orchestration.md  02-todo-tree.md  03-session-persistence.md  04-mcp-server.md  05-kiro-sessions.md  build-integration.md  colored-tree.md  complete-lsp-and-docs.md  context-and-tcl-api.md  csv-viewer.md  desktop-rewrite.md  fix-lsp-path.md  fix-silent-errors.md  fix-todo-tree.md  git-status-watcher.md  lsp-gaps.md  lsp-ide-features.md  lsp-integration.md  mcp-full-tab-visibility.md  mcp-ide-bridge.md  port-chrome-visuals.md  rusticle-tk-production.md  status-context-keys.md  structured-editor.md  (+5 more)
tests/: batch5_ux.rs  broker_key_external.rs  bug_regressions.rs  build_override.rs  chrome.rs  clipboard_cross.rs  clipboard_full.rs  clipboard_real.rs  clipboard_scenarios.rs  clipboard_viewer_test.rs  close_autosave.rs  code_action_render.rs  command_mode.rs  completion_dropdown_scenarios.rs  completion_enter_vs_tab.rs  completion_fixes.rs  completion_mx_scenarios.rs  completion_popup_position.rs  completion_prefix_filter.rs  completion_visual.rs  confirm_item.rs  csv_cursor_nav.rs  csv_cursor_position.rs  csv_parse.rs  csv_row_ops.rs  csv_view_edit.rs  csv_view_mode_switch.rs  csv_view_scenarios.rs  cursor_after_mx.rs  cursor_after_split.rs  cursor_hardware.rs  cursor_shapes.rs  diagnostic_lifecycle.rs  diagnostic_via_command.rs  diff_context_rendering.rs  diff_mode.rs  diff_model.rs  diff_revert.rs  diff_revert_scenario.rs  diff_sbs_single_view.rs  (+159 more)
txv/: Cargo.toml
txv-core/: Cargo.toml
txv-render/: Cargo.toml
txv-widgets/: Cargo.toml
txv-widgets/src/: command_item.rs  dialog.rs  event_loop.rs  file_list.rs  file_tree.rs  focus_group.rs  fuzzy_select.rs  group.rs  inline_edit.rs  input_dialog.rs  input_line.rs  key_encode.rs  lib.rs  list_view.rs  menu.rs  notification.rs  overlay.rs  progress_bar.rs  pty_session.rs  pty_terminal.rs  pty_terminal_scroll.rs  scroll_view.rs  scrollbar.rs  split_pane.rs  status_bar.rs  status_indicators.rs  status_items.rs  tab_bar.rs  tab_group.rs  tab_group_dropdown.rs  tab_group_tests.rs  tab_group_view.rs  table.rs  text_area.rs  tree_view.rs  view.rs  widget.rs
(+414 files in other folders)
