[workspace]
members = ["rusticle", "txv-core", "txv-render", "txv-widgets", "rusticle-tk"]

[package]
name = "kairn"
version = "0.1.0"
edition = "2021"

[dependencies]
txv-core = { path = "txv-core" }
txv-render = { path = "txv-render" }
txv-widgets = { path = "txv-widgets" }
rusticle = { path = "rusticle" }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
regex = "1"
git2 = { version = "0.19", default-features = false }
libc = "0.2"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
tempfile = "3.15"
