[workspace]
members = ["rusticle", "rusticle-tk"]

[package]
name = "kairn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mock_lsp"
path = "tests/mock_lsp/main.rs"

[dependencies]
txv-core = { path = "../txv/txv-core" }
txv-render = { path = "../txv/txv-render" }
txv-widgets = { path = "../txv/txv-widgets" }
duir-core = { git = "https://github.com/rotmistrk/duir.git", default-features = false, features = ["crypto"] }
rusticle = { path = "rusticle" }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
env_logger = "0.11"
regex = "1"
git2 = { version = "0.19", default-features = false }
libc = "0.2"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"

syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.15"