[package]
name = "rusticle-tk"
version = "0.1.0"
edition = "2021"
description = "TUI application framework — rusticle scripts rendered via txv-widgets"
license = "MIT"

[[bin]]
name = "rusticle-tk"
path = "src/main.rs"

[lib]
name = "rusticle_tk"
path = "src/lib.rs"

[dependencies]
rusticle = { git = "https://github.com/rotmistrk/rusticle.git" }
txv-core = { git = "https://github.com/rotmistrk/txv.git" }
txv-edit = { git = "https://github.com/rotmistrk/txv.git" }
txv-render = { git = "https://github.com/rotmistrk/txv.git" }
txv-widgets = { git = "https://github.com/rotmistrk/txv.git" }
crossterm = "0.28"
ignore = "0.4"
log = "0.4"
