[package]
name = "txv-widgets"
version = "0.1.0"
edition = "2021"
description = "Concrete View implementations — ready-to-use interactive TUI components"

[dependencies]
txv-core = { path = "../txv-core" }
txv-render = { path = "../txv-render" }
portable-pty = "0.8"
ignore = "0.4"
libc = "0.2"
log = "0.4"
